--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rescript/rescript-react",
+  "name": "@rescript/react",
   "version": "0.10.0",
   "description": "React bindings for ReScript",
   "files": [
@@ -7,7 +7,8 @@
     "Changes.md",
     "LICENSE",
     "bsconfig.json",
-    "src"
+    "src/**/*.res",
+    "src/**/*.resi"
   ],
   "scripts": {
     "build": "bsb -make-world",
