--- a/bsconfig.json
+++ b/bsconfig.json
@@ -5,8 +5,8 @@
     { "dir": "src", "subdirs": true },
     { "dir": "test", "type": "dev" }
   ],
-  "package-specs": [{ "module": "es6", "in-source": true }],
-  "suffix": ".mjs",
+  "package-specs": [{ "module": "commonjs", "in-source": true }],
+  "suffix": ".bs.js",
   "bs-dev-dependencies": ["rescript-test"],
   "bsc-flags": []
 }
