--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "reason-test-framework": "^0.3.2"
   },
   "peerDependencies": {
-    "bs-platform": "^8.3.0",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1"
+    "bs-platform": ">=8.3.0",
+    "react": ">=16.8.1",
+    "react-dom": ">=16.8.1"
   },
   "jest": {
     "moduleDirectories": [
