--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,11 @@ finalOutput/*.js
 /docs/
 *.log
 .bsb.lock
-/src/**/*.js
 _esy
 _build
 *.install
-*.bs.js
+test/*.bs.js
+src/legacy/*.bs.js
 
 # Editor
 /.idea/
