Use compiler 10.1.0-alpha.2

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -4,12 +4,9 @@
     "version": 4,
     "mode": "classic"
   },
-  "sources": [
-    {"dir": "src", "subdirs": true},
-    { "dir": "test", "type": "dev" }
-  ],
+  "sources": [{ "dir": "src", "subdirs": true }],
   "package-specs": [{ "module": "commonjs", "in-source": true }],
   "suffix": ".bs.js",
-  "bs-dev-dependencies": ["reason-test-framework"],
+  "bs-dev-dependencies": [],
   "bsc-flags": []
 }
