--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "jest": "^26.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rescript": "rescript-lang/rescript-compiler#d519570a28e9d524dc606a0ccc630acfe6b45ed8"
+    "rescript": "^10.1.0-alpha.2"
   },
   "peerDependencies": {
     "react": ">=18.2.0",
