--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rescript/react",
-  "version": "0.11.0-rc.1",
+  "version": "0.11.0-alpha.1",
   "description": "React bindings for ReScript",
   "files": [
     "README.md",
