--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React bindings for ReScript",
   "files": [
     "README.md",
-    "Changes.md",
+    "CHANGELOG.md",
     "LICENSE",
     "bsconfig.json",
     "src/**/*.res",
