--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rescript/react",
-  "version": "0.11.0-rc.3",
+  "version": "0.11.0",
   "description": "React bindings for ReScript",
   "files": [
     "README.md",
@@ -30,7 +30,7 @@
   "devDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rescript": "^10.1.0-rc.3"
+    "rescript": "^10.1.0"
   },
   "peerDependencies": {
     "react": ">=18.0.0",
