--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "devDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rescript": "^10.1.0"
+    "rescript": "^11.0.0-alpha.1"
   },
   "peerDependencies": {
     "react": ">=18.0.0",
