Deactivate uncurried mode to prevent formatter from removing uncurried dots

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -8,5 +8,6 @@
   "package-specs": [{ "module": "commonjs", "in-source": true }],
   "suffix": ".bs.js",
   "bs-dev-dependencies": [],
-  "bsc-flags": []
+  "bsc-flags": [],
+  "uncurried": false
 }
