--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
   "devDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rescript": "^11.0.0"
+    "rescript": "^12.0.0-alpha.5"
   },
   "peerDependencies": {
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0"
+  },
+  "dependencies": {
+    "@rescript/webapi": "^0.1.0-experimental-8ad0d94"
   }
 }
